# clone-repo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENSE  README.md  devenv.nix  justfile  noxfile.py  pyproject.toml
.github/workflows/: on_push_main.yaml  on_push_tag.yaml  pre-commit.yaml
clone_repo/: clone.py  main.py  parse_repo_url.py
tests/: test_main.py  test_parse_repo_url.py
