[tool.poetry]
name = "clone-repo"
version = "0.1.0"
description = "CLI tool to clone repos easily"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
structlog = "^21.5"
typer = "^0.4"
rich = "^12.0"
click = "<8.1.0"  # breaks typer 0.4.0

[tool.poetry.dev-dependencies]
black = "^22.1"
mypy = "^0.941"
pytest = "^7.1"
isort = "^5.10"
pre-commit = "^2.17"
nox = "^2022.1"
changelog-manager = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
clone-repo = 'clone_repo.main:app'
