[tool.poetry]
name = "clone-repo"
version = "1.0.0"
description = "CLI tool to clone repos easily"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/micktwomey/clone-repo"
repository = "https://github.com/micktwomey/clone-repo"
include = ["CHANGELOG.md", "justfile"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
structlog = "^21.5"
typer = "^0.4"
rich = "^12.0"
pyyaml = ">=6.0.1"    # Only needed to force > 6.0.0 to install, cython build issue

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pytest = "*"
pre-commit = "*"
changelog-manager = "*"
ruff = "*"
pytest-cov = "*"
coverage = { extras = ["toml"], version = "*" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
clone-repo = 'clone_repo.main:app'

[tool.ruff.lint]
extend-select = ["I"]
